
syntax = "proto3";

package redwood;

option go_package = "redwood.dev/tree/remotetxstore";

service RemoteStore {
    rpc Authenticate(stream AuthenticateMessage) returns (stream AuthenticateMessage) {}
    rpc AddMessage(AddMessageRequest) returns (AddMessageResponse) {}
    rpc RemoveMessage(RemoveMessageRequest) returns (RemoveMessageResponse) {}
    rpc FetchMessage(FetchMessageRequest) returns (FetchMessageResponse) {}
    rpc AllMessages(AllMessagesRequest) returns (stream AllMessagesResponsePacket) {}
}

message AuthenticateMessage {
    message AuthenticateChallenge {
        bytes challenge = 1;
    }

    message AuthenticateSignature {
        bytes signature = 1;
    }

    message AuthenticateResponse {
        string jwt = 1;
    }

    oneof payload {
        AuthenticateChallenge authenticateChallenge = 1;
        AuthenticateSignature authenticateSignature = 2;
        AuthenticateResponse  authenticateResponse  = 3;
    }
}

message Key {
    repeated bytes encryptedKey = 1;
}

message AddMessageRequest {
    bytes id = 1;
    bytes data = 2;
}

message AddMessageResponse {}

message RemoveMessageRequest {
    bytes id = 1;
}

message RemoveMessageResponse {}

message FetchMessageRequest {
    bytes id = 1;
}

message FetchMessageResponse {
    bytes data = 1;
}

message AllMessagesRequest {}

message AllMessagesResponsePacket {
    bytes id = 1;
    bytes data = 2;
}




